--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			</div><!-- /slider-wrapper -->
 
         </div>
-		<script src="http://www.jq22.com/jquery/1.8.3/jquery.min.js"></script>
+		<script src="https://s1.pstatp.com/cdn/expire-1-M/jquery/1.8.3/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jquery.ba-cond.min.js"></script>
 		<script type="text/javascript" src="js/jquery.slitslider.js"></script>
 		<script type="text/javascript">
