--- a/index.html
+++ b/index.html
@@ -128,13 +128,11 @@
 			{ start: 115, end: 120, textId: 'text24',imgId:'./images/tu-tak-9-10.jpg'},
 			// Add more time segments as needed
 		];
-		const imageUrls = timeSegments.map(data => data.imgId);
-
-			window.onload = function() {
-			preloadImages(imageUrls, () => {
-				console.log('所有图片预加载完成');
-			});
-			};
+		function preloadImage(url, callback) {
+			const img = new Image();
+			img.onload = callback;
+			img.src = url;
+			}
 		  // Function to display text based on current audio time
 		  function displayText() {
     		const currentTime = audioPlayer.currentTime;
@@ -142,7 +140,9 @@
 			if (currentTime >= segment.start && currentTime <= segment.end) {
 				let textToShow = document.getElementById(segment.textId);
 				textToShow.style.display = 'block';
-				bgImg.style.backgroundImage='url('+segment.imgId+')'
+				preloadImage(segment.imgId,()=>{
+					bgImg.style.backgroundImage = 'url(' + segment.imgId + ')';
+				})
 				if(segment.textId=='text18'){
 					icon.src='./images/long.png';
 				}
@@ -155,27 +155,6 @@
 
 		// Event listener for timeupdate event of audio element
 		audioPlayer.addEventListener('timeupdate', displayText);
-		function preloadImages(urls, allImagesLoadedCallback) {
-			let loadedCount = 0;
-			const imageCount = urls.length;
-
-			urls.forEach(url => {
-				const img = new Image();
-				img.onload = () => {
-				loadedCount++;
-				if (loadedCount === imageCount) {
-					allImagesLoadedCallback();
-				}
-				};
-				img.onerror = () => {
-				loadedCount++;
-				if (loadedCount === imageCount) {
-					allImagesLoadedCallback();
-				}
-				};
-				img.src = url;
-			});
-			}
 		const interval = 
 			$(function() {
 				var Page = (function() {
