--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 		<!-- 播放按钮 -->
         <button id="playButton">&#9658;</button>
 		<audio id="audioPlayer">
-			<source src="./audio/tu.mp3" type="audio/mpeg">
+			<source src="./audio/he.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
-		  </audio>
+		</audio>
         <img id="icon" src="./images/tu.png" alt="悬浮图片" class="floating-image">
 		<div class="speech-bubble" id="speechBubble">
 			<p id="tip"   class="tipText">点击右侧按钮播放语音讲解</p>
@@ -52,13 +52,14 @@
 			<p id="text15" class="audioText">早在1929年底“古田会议”后，毛泽东就开始重视党内和军内弥漫的悲观情绪。当他看到林彪的“新年贺信”后，</p>
 			<p id="text16" class="audioText">觉得这是一个非常好的机会，他希望通过回复林彪来信的方式，阐明他对中国革命和红军前途的看法，清除党内军内的消极情绪。</p>
 			<p id="text17" class="audioText">1930年1月5日，毛泽东利用难得的战斗间隙，在古田赖坊一家店铺的阁楼上，秉烛夜书，写下一封长信，即后来的《星星之火，可以燎原》。</p>
-			<p id="text18" class="audioText">1921年7月，中国共产党第一次全国代表大会在上海秘密举行。因遭到上海法租界巡捕袭扰，会议被迫中止。但代表们并没有退缩，</p>
-			<p id="text19" class="audioText">而是将会议的地点转移到浙江嘉兴南湖的一艘船上，完成了大会的最后议程。这次会议结束后，代表们把革命的火种带向全国各地。</p>
-			<p id="text20" class="audioText">从此，中国革命的航船从南湖扬帆启航，中国的历史开启了全新的篇章。</p>
-			<p id="text21" class="audioText">为纪念中共一大在嘉兴南湖胜利闭幕这一重大历史事件，1959年，南湖革命纪念馆建成开放，以湖中烟雨楼作为馆址，</p>
-			<p id="text22" class="audioText">按照当年中共一大代表乘坐的游船样式仿制的红船纪念船正式下水，向世人展出。20世纪60年代，中共一大代表董必武两次重访南湖，</p>
-			<p id="text23" class="audioText">写下了“烟雨楼台革命萌生，此间曾著星星火；风云世界逢春蛰起，到处皆闻殷殷雷”的感慨。改革开放后,</p>
-			<p id="text24" class="audioText">党和国家领导人亲切关怀党的诞生地，或瞻仰红船，或亲笔题词，勉励我们“沿着南湖红船开辟的革命航道奋勇前进”。</p>
+			<p id="text18" class="audioText">大家好,我是黄小龙,今天给大家讲一下，薪火红色文创产品的灵感来源小故事。红船故事。</p>
+			<p id="text19" class="audioText">1921年7月，中国共产党第一次全国代表大会在上海秘密举行。因遭到上海法租界巡捕袭扰，会议被迫中止。但代表们并没有退缩，</p>
+			<p id="text20" class="audioText">而是将会议的地点转移到浙江嘉兴南湖的一艘船上，完成了大会的最后议程。这次会议结束后，代表们把革命的火种带向全国各地。</p>
+			<p id="text21" class="audioText">从此，中国革命的航船从南湖扬帆启航，中国的历史开启了全新的篇章。</p>
+			<p id="text22" class="audioText">为纪念中共一大在嘉兴南湖胜利闭幕这一重大历史事件，1959年，南湖革命纪念馆建成开放，以湖中烟雨楼作为馆址，</p>
+			<p id="text23" class="audioText">按照当年中共一大代表乘坐的游船样式仿制的红船纪念船正式下水，向世人展出。20世纪60年代，中共一大代表董必武两次重访南湖，</p>
+			<p id="text24" class="audioText">写下了“烟雨楼台革命萌生，此间曾著星星火；风云世界逢春蛰起，到处皆闻殷殷雷”的感慨。改革开放后,</p>
+			<p id="text25" class="audioText">党和国家领导人亲切关怀党的诞生地，或瞻仰红船，或亲笔题词，勉励我们“沿着南湖红船开辟的革命航道奋勇前进”。</p>
 		</div>
 		<div class="container demo-1">
             <div id="slider" class="sl-slider-wrapper">
@@ -102,30 +103,31 @@
 		});
 		  // Define time segments and associated text
 		const timeSegments = [
-			{ start: 0, end: 5,  textId: 'text1',  imgId:'./images/tu-tak-1.jpeg'},
-			{ start: 5, end: 10, textId: 'text2',  imgId:'./images/tu-tak-2.jpeg'},
-			{ start: 10, end: 15, textId: 'text3', imgId:'./images/tu-tak-2.jpeg'},
-			{ start: 15, end: 20, textId: 'text4', imgId:'./images/tu-tak-3.jpeg'},
-			{ start: 20, end: 25, textId: 'text5', imgId:'./images/tu-tak-3.jpeg'},
-			{ start: 25, end: 30, textId: 'text6', imgId:'./images/tu-tak-4-5.png'},
-			{ start: 30, end: 35, textId: 'text7', imgId:'./images/tu-tak-4-5.png'},
-			{ start: 35, end: 40, textId: 'text8', imgId:'./images/tu-tak-4-5.png'},
-			{ start: 40, end: 45, textId: 'text9', imgId:'./images/tu-tak-6-7.png'},
-			{ start: 45, end: 50, textId: 'text10',imgId:'./images/tu-tak-6-7.png'},
-			{ start: 50, end: 55, textId: 'text11',imgId:'./images/tu-tak-6-7.png'},
-			{ start: 55, end: 60, textId: 'text12',imgId:'./images/tu-tak-81.jpeg'},
-			{ start: 60, end: 65, textId: 'text13',imgId:'./images/tu-tak-81.jpeg'},
-			{ start: 65, end: 70, textId: 'text14',imgId:'./images/tu-tak-8.jpeg'},
-			{ start: 70, end: 75, textId: 'text15',imgId:'./images/tu-tak-8.jpeg'},
-			{ start: 75, end: 80, textId: 'text16',imgId:'./images/tu-tak-8.jpeg'},
-			{ start: 80, end: 85, textId: 'text17',imgId:'./images/tu-tak-9-10.jpg'},
-			{ start: 85, end: 90, textId: 'text18',imgId:'./images/tu-tak-9-10.jpg'},
-			{ start: 90, end: 95, textId: 'text19',imgId:'./images/tu-tak-9-10.jpg'},
-			{ start: 95, end: 100, textId: 'text20',imgId:'./images/tu-tak-9-10.jpg'},
-			{ start: 100, end: 105, textId: 'text21',imgId:'./images/tu-tak-9-10.jpg'},
-			{ start: 105, end: 110, textId: 'text22',imgId:'./images/tu-tak-9-10.jpg'},
-			{ start: 110, end: 115, textId: 'text23',imgId:'./images/tu-tak-9-10.jpg'},
-			{ start: 115, end: 120, textId: 'text24',imgId:'./images/tu-tak-9-10.jpg'},
+			{ start: 0, end: 9.2,  textId: 'text1',  imgId:'./images/tu-tak-1.jpeg'},
+			{ start: 9.2, end: 27, textId: 'text2',  imgId:'./images/tu-tak-2.jpeg'},
+			{ start: 27, end: 38.3, textId: 'text3', imgId:'./images/tu-tak-2.jpeg'},
+			{ start: 38.3, end: 50.18, textId: 'text4', imgId:'./images/tu-tak-3.jpeg'},
+			{ start: 50.18, end: 59.15, textId: 'text5', imgId:'./images/tu-tak-3.jpeg'},
+			{ start: 59.15, end: 70.18, textId: 'text6', imgId:'./images/tu-tak-4-5.png'},
+			{ start: 70.18, end: 84.23, textId: 'text7', imgId:'./images/tu-tak-4-5.png'},
+			{ start: 84.23, end: 94.10, textId: 'text8', imgId:'./images/tu-tak-4-5.png'},
+			{ start: 94.10, end: 107.16, textId: 'text9', imgId:'./images/tu-tak-6-7.png'},
+			{ start: 107.16, end: 119.08, textId: 'text10',imgId:'./images/tu-tak-6-7.png'},
+			{ start: 119.08, end: 131.15, textId: 'text11',imgId:'./images/tu-tak-6-7.png'},
+			{ start: 131.15, end: 142.13, textId: 'text12',imgId:'./images/tu-tak-81.jpeg'},
+			{ start: 142.13, end: 152.10, textId: 'text13',imgId:'./images/tu-tak-81.jpeg'},
+			{ start: 152.10, end: 162.18, textId: 'text14',imgId:'./images/tu-tak-8.jpeg'},
+			{ start: 162.18, end: 172.06, textId: 'text15',imgId:'./images/tu-tak-8.jpeg'},
+			{ start: 172.06, end: 183.21, textId: 'text16',imgId:'./images/tu-tak-8.jpeg'},
+			{ start: 183.21, end: 196.06, textId: 'text17',imgId:'./images/tu-tak-9-10.jpg'},
+			{ start: 196.06, end: 204.09, textId: 'text18',imgId:'./images/hc-10.jpeg'},
+			{ start: 204.09, end: 216.19, textId: 'text19',imgId:'./images/hc-2.jpeg'},
+			{ start: 216.19, end: 227.12, textId: 'text20',imgId:'./images/hc-3.jpeg'},
+			{ start: 227.12, end: 233.23, textId: 'text21',imgId:'./images/hc-4.jpeg'},
+			{ start: 233.23, end: 244.10, textId: 'text22',imgId:'./images/hc-5.jpeg'},
+			{ start: 244.10, end: 256.21, textId: 'text23',imgId:'./images/hc-6.jpg'},
+			{ start: 256.21, end: 265.26, textId: 'text24',imgId:'./images/hc-7.jpg'},
+			{ start: 265.26, end: 276.03, textId: 'text25',imgId:'./images/hc-8.jpg'},
 			// Add more time segments as needed
 		];
 		function preloadImage(url, callback) {
@@ -143,8 +145,11 @@
 				preloadImage(segment.imgId,()=>{
 					bgImg.style.backgroundImage = 'url(' + segment.imgId + ')';
 				})
-				if(segment.textId=='text18'){
-					icon.src='./images/long.png';
+				if(currentTime>=196.06){
+				    icon.src='./images/long.png';
+				}
+				if(currentTime>=0&&currentTime<=196.06){
+				    icon.src='./images/tu.png';
 				}
 			} else {
 				let textToHide = document.getElementById(segment.textId);
@@ -152,7 +157,6 @@
 			}
 			}
 		}
-
 		// Event listener for timeupdate event of audio element
 		audioPlayer.addEventListener('timeupdate', displayText);
 		const interval = 
