--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
 		}
 		// Event listener for timeupdate event of audio element
 		audioPlayer.addEventListener('timeupdate', displayText);
+
+		audioPlayer.addEventListener('ended',()=>{
+			playButton.innerHTML = '&#9658;';
+			tip.style.display='block';
+			tip.innerHTML='您可以点击按钮重新播放'
+		})
 		const interval = 
 			$(function() {
 				var Page = (function() {
