--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			{ start: 162.18, end: 172.06, textId: 'text15',imgId:'./images/tu-tak-8.jpeg'},
 			{ start: 172.06, end: 183.21, textId: 'text16',imgId:'./images/tu-tak-8.jpeg'},
 			{ start: 183.21, end: 196.06, textId: 'text17',imgId:'./images/tu-tak-9-10.jpg'},
-			{ start: 196.06, end: 204.09, textId: 'text18',imgId:'./images/hc-10.jpeg'},
+			{ start: 196.06, end: 204.09, textId: 'text18',imgId:'./images/hc-10.jpg'},
 			{ start: 204.09, end: 216.19, textId: 'text19',imgId:'./images/hc-2.jpeg'},
 			{ start: 216.19, end: 227.12, textId: 'text20',imgId:'./images/hc-3.jpeg'},
 			{ start: 227.12, end: 233.23, textId: 'text21',imgId:'./images/hc-4.jpeg'},
