--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     </head>
     <body>
 		<!-- 播放按钮 -->
-        <button id="playButton">&#9658;</button>
+        <button id="playButton">
+			<span>&#9658;</span>
+		</button>
 		<audio id="audioPlayer">
 			<source src="./audio/he.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
